--- a/JobSearch.html
+++ b/JobSearch.html
@@ -35,6 +35,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-6v">
 
     
@@ -83,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
 
     
 
@@ -107,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hherqcQScEqNkEGpaTyLb3MD3m0oORF4Ga+JYnrTGqfmTp5NcV11rtrsUZDs3+ySPoHSPWV3rUKhboUdcoGT8NyNnX3LtpMusTCIlU80VjI6I30ST3XLcPohGURkqAXn.jz9DP8jRETzLeAWw7Mg3uUdL5mSdWbci8seWLl38HC/q/WEDQCkNl9VyaPJC4EtFtI3lfdzUlOPscsoD34GmMRqOlF2oUFOEp5LC4NqM3wCSDImnRpxbUGQuS4RhiwVj">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="pWa8Y3iI7bHZ0FhTayBFXOJlMvx43d7L0LD3Q8dshwLkwQxrGe8eQAPBeV+ErmJo99APxuHaQt4yYlAD7lrxcBKiU79R9ay0V+mewAFRpAnoFU1XnwWB5UqZIwsWoCEJ.RZ619kbaNMQu8KKEUCEiYidJXwCVP3nES2F3sk857VgomgfD9Ovpd9KPLm9cKJvo3P0GKkFsBjvG9c5Uf11YimZkcpTcF3fZlCQaRU+31LA+GaCSryhsv7QAMqebBF3W">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
