--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -34,6 +34,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rCGl02FmYT" once="menu" id="menu1-6m">
 
     
@@ -82,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -106,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gYcXJgOsjF6GBvs2p6MlcwUlY59DFmEvW24VB+7LaBy5ZkC847JXbX42s3sH2OWIKHaPf/pVPEMJuCg102x7oLgB6w/8X73A3dA1CfF7ECpyzNnUb4jlBGrVYROPbDPP.rPXClIU5GcHreBX0fvVmvyCQzMYRpA1WjfSKedoE18RUCVQOAqnFuy3Nr4XL8hlZSK9O301AelsREigWQPuqqIgrXBCEknJaq9DfS5MGSZ+AliDpLYlWstxGeXkJDgXu">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NidQPRInYX3l2g4dMA6YWXUbEcoYTI1Fb8rbBBI+ePe1O+d+coobqoHvpr8HteSOzi5un2WqhzVpaubfJ2ankIeSMCd7Zd/TbPkr4Gddi8WTOIS2NpddSehJ1+kwjSgV.x8YnYUL3k5R0hFwfMF4wdhHLs0OA0/Z/Zdox+hFZG1UcdyduBmxF4wUXmbIUCg2I/lSth+mDkDrPKOKW+MIwfJtDNLP49iRPEujPUA8OOlBUiCw5H0B+jzcbtMd7CRxj">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
