--- a/SelfAsses.html
+++ b/SelfAsses.html
@@ -34,6 +34,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-6i">
 
     
@@ -82,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
 
     
 
@@ -106,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NadwP88StBoEsWBVedokJtMuP+x2ToZI4yMvoxXSe+/+5IgjkayIAJTs2R74g/mSbHFMudHhLEbuB7C5yzqW7Y4DGLy+21+coQpvc/fcLJD+dJZ+5pGFLLlhN1g7UZMT.Qjxlld88PgkWTwi5l3BP5JnuNWeQrUIZGb2AYwgaIJWogks4mROIhsDYNq8q10Da2exXsKD6z7tVUSmx3ESh0FLxP8ZZFrEa+/Qm+G1CsUmjgtUupSykVWpsdDaqJqAf">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fAyYIb9CEh4kS2qbnRYwi8dBIgKFVNt07L/F3q2kM0VvEsIAEarhNyzxOng8Oz2flUhetD9VaPKo81Z+UTTQT+majt2RKFfYOKJUXDnhRdn0dOHfGeKxzoluuXKx53Qs.LgDKFXx0BjPcxMMzilHBZX7VVASsfy1ELTUNtb/ZASAL9aZ6adCrVsT6RCS47Q9VlRwVNxpKjF4zDq/FiFYgx6Kn52wu685/PBPCmz35QmIPkFD2SGtTFv+5Z8h3PZxl">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
