--- a/career.html
+++ b/career.html
@@ -30,6 +30,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-19">
 
     
@@ -78,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
 
     
 
