--- a/training.html
+++ b/training.html
@@ -31,6 +31,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-17">
 
     
@@ -79,7 +94,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
