--- a/CV01.html
+++ b/CV01.html
@@ -34,6 +34,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-6f">
 
     
@@ -82,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -106,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Aq1UJciYmiLlih9qpysMBrplgM2Ih/CGX4yjnENPrL8WDqrX9bfo7ZjGd00b54Hmy2sxb3E3lgtDSmQ946HhLnHRFXHgKF8R8UX8yDaA8DDc0CD7FuYQbQXminc0qCBs.VYfV/9+Kd/XeVnMxk/2HkDBDKjfVwuPgLf0eKpmckuNISYNSFIMXRcJ14CNQ0IiBbV75U92MpLE5obFj8Ow42rHuEVVYv/BwjkC5XdHMsnyn8FrNLsSACdd5V4gX4qVc">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="l4PPKij8HlEo9y4ziQZI6ZOdEWG5JIQQA/ValhXaWJHbeLS6lZeebeqTCG7EsyhD7XpTKVk9A+6gqcmcPr8S0Kfw8v4fwxNu+mNbSBrr5CCW6Y/LGZW5BWZiEQomH/jP.chzznpF72WQtLVBFcjwYTAACfq6YbFFLcVSYAMcCgKGmf/GSoGAkNROwFAUzB+hHnl/iIesOYICsyqEX6jfoKoEHttijpGGZVfXKgNJNjiQN/1lhBYZ4xMqGy3X0MJ0l">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
