--- a/Employers.html
+++ b/Employers.html
@@ -31,6 +31,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-5e">
 
     
@@ -79,7 +94,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -131,7 +146,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background115.jpg" alt="Mobirise">
+                        <img src="assets/images/background15.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
@@ -147,7 +162,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background210.jpg" alt="Mobirise">
+                        <img src="assets/images/background20.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
@@ -164,7 +179,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background311.jpg" alt="Mobirise">
+                        <img src="assets/images/background31.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
@@ -179,7 +194,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background412.jpg" alt="Mobirise">
+                        <img src="assets/images/background42.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
