--- a/JobAdd.html
+++ b/JobAdd.html
@@ -35,6 +35,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-70">
 
     
@@ -83,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -107,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="etlKeG1ZnB0qTtIes7kk8CQyA72jzsN3Rgqb7AGwK7H4/bI9gfGsN95Z5FIfWbh2c0COBlPzSX1VPEBYAT/0o4GbLUVlAkB6ZUcjjHDKbF+84dSsVA4FFZds9qVi2pcN.6R0fjs/BEOcfn+jmrIKpNwj3XgyTPXFwA1hiHQ8Jbk+g5+Ufdcda91NpLRvO480C5tDB8x3wHTvHsHW5ISX05cl9UIqgre1L+/3mICbWj9gR8uVpvd55uQModDTDB1GG">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qeRu4XytQqoHk1AaS8KxykawZZkmbL5met8l3zQksiRn0CTcRPSCuOtWpFPLBjDXqFPRbh6T4+4jocOnyXOaJsk+6Vq3mteFmkgwogcA63SAujHr/XaaCu8xNW91McM/.d8R2T3sz/QDd20lijcFmmnEAZShQ8xacUmRlD+Xt/JzKj0czUUirPFcFTqPjIdoUS9AyaqlqO7lnlBZCVXTYHlfBQuUifgWLZtQPM4/It9FSO0GR7bU9nnvpD4ZIkp0Q">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
