--- a/Local.html
+++ b/Local.html
@@ -33,6 +33,21 @@
 <link rel="stylesheet" href="assets/wowslider-init/silence/style.css">
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-55">
 
     
@@ -81,7 +96,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
 
     
 
@@ -483,7 +498,7 @@
     </div>
 </section>
 
-<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="440" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="1602" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-wowslider">
         <div class="ws_images">
             <ul>
