--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -35,6 +35,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rDq2pWFCKM" once="menu" id="menu1-7f">
 
     
@@ -83,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -107,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="W2D6uZLjs1UGSU5oex5jEju3nyR3HAwwpdOUzsgcIN1OuIv1pXZnkeNA78enBLgUuYfcIbKMrBVRFEKO/mPPDze5TYKXpCzkRQ7LQvwaDGi/qHmzeQlAi438lYn1zUGZ.yb5NiqGFU9FS2viDzBhDBk+WgK89kE2x6USEIuxnMShy8qZV3OBt9eYeXvo19VM9gWj1jqZSDpTcGqj+PWLlwJMcy8xF1KsdxDH6TaMyaFIniNkkz+jqNNakHEZVjPaN">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QXIQdnIyjseKwlbt84DJPDpFAY48R9bjXhDGL08Hg6qUixmwXQYsEpVHiTX82PamQM1Hki89SAr/Z66BS/oHKxM6xcHQQMkShT3N5j2h8Yx/mp2UlNvX49oFzaxNb/Fk.lwpE3b8NAA4MYFPIRkdSw2eej4W5gKu/2MPkUDVwdix2w6oQEE2Hk1/uy4UFbtEFZw+xig5tHjX9IBA3R30kbGn6BcTmfTfyR1CVUZ7FAFRSL7gUk1lhxblVPGAtvEcj">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
