--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -34,6 +34,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rDq1AEdohN" once="menu" id="menu1-7a">
 
     
@@ -82,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -106,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="LeYZnbaNXv3fqMXayPYgbB2IRldX/CATG7nC6QxjvkT8kDVj6gT1yDxm77Q1bZsi44+lYtr1donxStWLMYjknlLJGtMbJHgTUe+CTDe85RfW0zwDVarsh27aENC64rRI.GRVfv/zRDQkPuPxFiT27/oYMO9Mmm050xvUoEAtHxL1WfbyS6cJ+tVmuSthqsqUtmYuwPmwdsxx4GqON+Ofel5NW1doCvdLbGT09+Abvr5T50M00KP3edHvSQlx2dQxN">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="0T3O61o8dZKN2KMQpXvMChf9NPqg3wZHt/dvAhmGBduUhbws/Wz1DTFZQOSyOC90sY8nBQgIa6EfP0UtDosJeWr1oGQOKWEfu4enpZMKh82aisb/rMrc19VfLa1OY7rg.sXbTG+V7ZheskEhqXIhqhpMXgeCut22+yO5/p3Sfndgr0P8h+AoUMnT3RMu78LctQ0RXj9qsfSG9XTMoKfOOABm+yxyV0d3914safDch4l5iV3ZaNt8WjUVuGXzPLnqb">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
