--- a/studies.html
+++ b/studies.html
@@ -30,6 +30,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33414728-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-33414728-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rFLnXv58PK" once="menu" id="menu1-9e">
 
     
@@ -78,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
 
     
 
@@ -135,7 +150,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a></div>
-                        <img src="assets/images/background116.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background16.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -152,7 +167,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background217.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background27.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -170,7 +185,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background318.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background38.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><a href="assets/files/201809SOCLMAR.pdf" target="_blank">Sadat Industrial City 2018</a></h4>
@@ -318,7 +333,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background115.jpg" alt="Mobirise">
+                        <img src="assets/images/background15.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market and HR</strong></h4>
@@ -334,7 +349,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background210.jpg" alt="Mobirise">
+                        <img src="assets/images/background20.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies by sector</strong></h4>
@@ -350,7 +365,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background311.jpg" alt="Mobirise">
+                        <img src="assets/images/background31.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies</strong></h4>
