--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -121,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NidQPRInYX3l2g4dMA6YWXUbEcoYTI1Fb8rbBBI+ePe1O+d+coobqoHvpr8HteSOzi5un2WqhzVpaubfJ2ankIeSMCd7Zd/TbPkr4Gddi8WTOIS2NpddSehJ1+kwjSgV.x8YnYUL3k5R0hFwfMF4wdhHLs0OA0/Z/Zdox+hFZG1UcdyduBmxF4wUXmbIUCg2I/lSth+mDkDrPKOKW+MIwfJtDNLP49iRPEujPUA8OOlBUiCw5H0B+jzcbtMd7CRxj">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="v0z0qKnIFz67EvOTGAH6vRu9TzBZnO3IdXMxJeWPyFioDeoJjzKlghgWENdMU3AcIjlvAJjftqsaGuZpTCD/tmD+1tdEAljIWSJK4xCJUZvruK4K38ZM5j+Sw+EvybfH.PWqPVr5++jIuzGYwZqwlSLYqQh6ksvfp96cSOs1ADs0i0BdGA9NfH4gu3/S9MxzjTecDadmvZFkbxld8x/RDjnGI34Kh+aT1zKjxkut541akSusANDDeGqB0M3XGP9nV">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
