--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QXIQdnIyjseKwlbt84DJPDpFAY48R9bjXhDGL08Hg6qUixmwXQYsEpVHiTX82PamQM1Hki89SAr/Z66BS/oHKxM6xcHQQMkShT3N5j2h8Yx/mp2UlNvX49oFzaxNb/Fk.lwpE3b8NAA4MYFPIRkdSw2eej4W5gKu/2MPkUDVwdix2w6oQEE2Hk1/uy4UFbtEFZw+xig5tHjX9IBA3R30kbGn6BcTmfTfyR1CVUZ7FAFRSL7gUk1lhxblVPGAtvEcj">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aigVDZZCrDYTWUrlj35EZCHi23et9qm3Io9qQTWV1jNHxq59o3F6jn5sEIxYu4cZ8SM8GSw+2C9U65TSLTj2zbxK0gOATspNheqZ1TcYOoKvaoz8ZoFLhWfuozegxgRN.rCxHclu8iYZnrDX93r4cRiJYnf2v57HyveKpznCgd1vhK/ZS6xDRj58hCcrPsUjLQRnxZc/TsKkxVGEwnl8VPVsPUqdq1Zov6yGYdwQ5p2Ri8QkikCD2jOEjQkrv8i43">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
