--- a/JobAdd.html
+++ b/JobAdd.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qeRu4XytQqoHk1AaS8KxykawZZkmbL5met8l3zQksiRn0CTcRPSCuOtWpFPLBjDXqFPRbh6T4+4jocOnyXOaJsk+6Vq3mteFmkgwogcA63SAujHr/XaaCu8xNW91McM/.d8R2T3sz/QDd20lijcFmmnEAZShQ8xacUmRlD+Xt/JzKj0czUUirPFcFTqPjIdoUS9AyaqlqO7lnlBZCVXTYHlfBQuUifgWLZtQPM4/It9FSO0GR7bU9nnvpD4ZIkp0Q">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qbBhlBK5yAf6iJbEomyWZpGEATEebgMzqpDeUAQkd3keGC99fxRn2T2Crnydzisf336mWiCP7YI4Hco6S243LIZkgcYGWj4rqCUPE1mZxkewhbv3fWkNMYqo8vSMs8Qh.yz+DTTr5BE+WXHNT4BjadpMgqwCQdTlyZXNFrZsci6eW8TRNOZ4xSOFJhnIX3pviwmn3VcxMLTlBdCClA6f0tjtT+RwcMJuSfQBD40VPStVH9L3mowjuwOfSzFnUqFUL">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
