--- a/JobAdd.html
+++ b/JobAdd.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -115,14 +115,14 @@
     </div>
 </section>
 
-<section dir="rtl" class="form cid-rDpZgoxZgX" id="formbuilder-72">
+<section dir="LTR" class="form cid-rDpZgoxZgX" id="formbuilder-72">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qbBhlBK5yAf6iJbEomyWZpGEATEebgMzqpDeUAQkd3keGC99fxRn2T2Crnydzisf336mWiCP7YI4Hco6S243LIZkgcYGWj4rqCUPE1mZxkewhbv3fWkNMYqo8vSMs8Qh.yz+DTTr5BE+WXHNT4BjadpMgqwCQdTlyZXNFrZsci6eW8TRNOZ4xSOFJhnIX3pviwmn3VcxMLTlBdCClA6f0tjtT+RwcMJuSfQBD40VPStVH9L3mowjuwOfSzFnUqFUL">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jyGmI18QZply4jAvFdpFXzKVy2de6ypQBD2TVzaqMX9Pf354eu150AdTOQKxEpeylALqCOq1kt5OEPP3bFI6xYPZeqI4dABgM9US/1VW/UAxr2tZVyQ+AyBYUs8Wskq0.5nyWKfL78WYgao83W4TPq8Qg9eYhngbHeRS6xiPeE0dxHXxkxyEK0MEl9g33/4WpWp23ZM3t9ov7UfsaVBWVTgoXOr8B+/qiDOgRA+QU+IfXDglDgAYyIe78cjIG2oJD">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
