--- a/RegUser.html
+++ b/RegUser.html
@@ -96,21 +96,21 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="form cid-rDpy93NEgi" dir="rtl" id="formbuilder-6e">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="form cid-rDpy93NEgi" dir="ltr" id="formbuilder-6e">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="EpG0hO3Wpd4ee/Ztl1iGF4tLhxACGtK/2oigCM9rshiLo8VVUdSSz+coZ8+6mcEMcvf/P7dsE+FOsZkmgDyP0RfIpbDXtOc5k5rPG38dCn99g4CrXMyBS7zjeeYXPZeG.v1UhcTX6CXhQAsppHQ6djfpMvXAl0NR7M0IwujHGINlsiTj3tbpZhDIDlQ6jIzK095OHSJ9+amn4VDxhXfB1yPCJamEQdsJ5p8dxUAb90rm4gnioJp1Eb4Qnzf3BT+r3">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ubf3AYIPGx0/qSoXMHIBujs9gK9NthACN2uNZiuvvSkE3TfVrJIFguJ8FRqxn1zpL9Wfx07AkJeB6HJxgLVZ9i1Cf92dNUYzWWVMZheM+y2kYERjRDz7FLDC5lVeoZO5.NO3XeV7lUVrdsjtfdiC9ca9sSj+4OumXRA0sGmTUrv6/YcRRyYUYlgyrJOZYXzIhhQA/5zBBYC0VXZ4+xYNsCISWrNudUuvrt8V5Vt1hVDmpr3U8VM7a6Baoa6NIBo3Q">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">saved</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2"><strong>User Registeration</strong></h4>
+<h4 class="mbr-fonts-style display-2">&lt;b&gt;User Registeration&lt;/b&gt;</h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
@@ -160,7 +160,7 @@
 <div data-for="textarea" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <textarea name="textarea" placeholder="Textarea" data-form-field="textarea" class="form-control display-7" id="textarea-formbuilder-6e"></textarea>
 </div>
-<div class="col-auto"><button type="submit" class="btn btn-primary display-7">Save</button></div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbri-save mbr-iconfont mbr-iconfont-btn"></span>Save&nbsp;</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
