--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
@@ -147,7 +147,7 @@
                 </div> 
                 <div class="mbr-crt-title pt-3">
                     <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Publick transport
+                        Public transport
                     </h4>
                 </div>                 
             </div>
@@ -186,8 +186,7 @@
                 </div> 
                 <div class="mbr-crt-title pt-3">
                     <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Study
-                    </h4>
+                        Vocational</h4>
                 </div>                 
             </div>
 
@@ -199,8 +198,7 @@
                 </div> 
                 <div class="mbr-crt-title pt-3">
                     <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Gifts
-                    </h4>
+                        Graduates</h4>
                 </div>                 
             </div>
         </div>
@@ -438,7 +436,7 @@
    </div>
 </section>
 
-<section dir="rtl" class="section-table cid-rDpSSngnzx" id="table1-6u">
+<section dir="ltr" class="section-table cid-rDpSSngnzx" id="table1-6u">
 
   
   
