--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -10,19 +10,18 @@
   <meta name="description" content="Egypt LMIS Labor Market Inforamtion System">
   
   <title>SchoolToLaborForm</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/icons-mind/style.css">
   <link rel="stylesheet" href="assets/icon54/style.css">
-  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
+  <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -114,14 +113,14 @@
     </div>
 </section>
 
-<section class="form cid-rDpQOPAGnv" dir="rtl" id="formbuilder-6o">
+<section class="form cid-rDpQOPAGnv" dir="ltr" id="formbuilder-6o">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="v0z0qKnIFz67EvOTGAH6vRu9TzBZnO3IdXMxJeWPyFioDeoJjzKlghgWENdMU3AcIjlvAJjftqsaGuZpTCD/tmD+1tdEAljIWSJK4xCJUZvruK4K38ZM5j+Sw+EvybfH.PWqPVr5++jIuzGYwZqwlSLYqQh6ksvfp96cSOs1ADs0i0BdGA9NfH4gu3/S9MxzjTecDadmvZFkbxld8x/RDjnGI34Kh+aT1zKjxkut541akSusANDDeGqB0M3XGP9nV">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="B1DRe9Y8ZCXzmYc/4QvtIm3oT6RZ5S4AHlrJDlVVc5JTFAI65NnvwWQO1zcjqUZQKF5/FUFSeXcS+OoAf2s3l7aQR+DXiTA4CqEClziNGDQdwrBsKm+2WMC+ZZIK2R1H.IX7jPJ8AjxjYEyQbHeRprj8e7YhlsL9/AIJ7rEsibEbIMscxTl00KUy+i7Qn2Z2hVrtK0L1b8H5wjQz4iby0oNkjJvVPK2T64pNitoxRAvaHfQgjgMdo17KkYPTQEXrf">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -155,7 +154,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
 <textarea name="message" placeholder="other" data-form-field="message" class="form-control display-7" id="message-formbuilder-6o"></textarea>
 </div>
-<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span></button></div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbri-save mbr-iconfont mbr-iconfont-btn"></span>Save &nbsp;</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -230,15 +229,15 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>
   <script src="assets/formstyler/jquery.formstyler.js"></script>
   <script src="assets/formstyler/jquery.formstyler.min.js"></script>
+  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
