--- a/SelfAsses.html
+++ b/SelfAsses.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
 
     
 
@@ -114,21 +114,21 @@
     </div>
 </section>
 
-<section class="form cid-rDpKsFJobg" dir="rtl" id="formbuilder-6k">
+<section class="form cid-rDpKsFJobg" dir="ltr" id="formbuilder-6k">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uwFRjFtJcWZO/YDTHZQX5vyYBtz7vScN54clghEr9ub/kkZDKGsWvVFe0ddj12HF5PLsvjEnrr6kC8fQ/hamA3QrwU0r4DBq8PtJQG3TVfeCWX3rAezDGn78GXhh8Xz3.eQ6kJnzZmsnFK3AXx4iZX1OwxNQHt79rC+qrJzd97nTOLlLbGgyHKH6jP2bGtFokvYRiBYImmX4oMHSmVzILK3/vxhm/d3Hya86GB7c4DLoXHLj+XDa51uFttQdJPhyp">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aTQxB7JhQ/U5opebY/gCcdkA/Vh3wldDoxSGBRMvCw/wLQaGayC/EPzgFkuV3hpBzaR43AYNFBa7jexWif4cE0wxq8kZO8JonJCFso4Sat+PzKz7ei+IwtDfhgsgxbsJ.SpLmFj/3iZ3E/L52nNkbVUd0/540fWdp63Khu7A8803vqU5qGNOFHZLBAbqDHHKTviyYopK6cCxs3eRI2kivQ6EFUJIziKgszFQN1mAoJ21skHhisfWgtvg8C9ZUTe8f">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2"><strong>Self Assesment</strong></h4>
+<h4 class="mbr-fonts-style display-2">Self Assesment</h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
@@ -152,50 +152,32 @@
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="tel" name="phone" placeholder="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6k">
 </div>
-
-<div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="checkbox" style="transform: translateZ(0px);">
-<div class="form-control-label">
-<label for="checkbox" class="mbr-fonts-style display-7"></label>
+<div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
+<label for="message-formbuilder-6k" class="form-control-label mbr-fonts-style display-7">Additional information</label>
+<textarea name="message" placeholder="Additioanl information" data-form-field="message" class="form-control display-7" id="message-formbuilder-6k"></textarea>
 </div>
-<div class="form-check">
-
-<label class="form-check-label display-7"></label>
+<div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="Sector">
+<select name="Sector" data-form-field="Sector" class="form-control display-7" id="Sector-formbuilder-6k">
+<option value="Select">Select</option>
+<option value="Second">Second</option>
+<option value="Third">Third</option>
+</select>
 </div>
-<div class="form-check">
-
-<label class="form-check-label display-7"></label>
-</div>
-<div class="form-check">
-
-<label class="form-check-label display-7"></label>
-</div>
-</div>
-<div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="checkbox1">
-<div class="form-control-label">
-<label for="checkbox1" class="mbr-fonts-style display-7"></label>
-</div>
-<div class="form-check">
-
-<label class="form-check-label display-7"></label>
-</div>
-<div class="form-check">
-
-<label class="form-check-label display-7"></label>
-</div>
-<div class="form-check">
-
-<label class="form-check-label display-7"></label>
-</div>
-</div>
-
-
-<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn" style="font-size: 42px;"></span></button></div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbri-save mbr-iconfont mbr-iconfont-btn"></span>Save</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
         </div>
     </div>
 </section>
+
+<div id="custom-html-9n"><!-- Type valid HTML here -->
+
+<div>
+    <h1 class="display-1">Training Needs Assesment</h1>
+  <iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=6SvwXaGGTE6qikbIYlZMlnDtd2PxIURJt1xp5HjFOZpUMDZWMEIzQlc4VFc1M1RISjZKRUo1MjdCNC4u&amp;embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" msallowfullscreen=""> </iframe>
+    <p class="display-3">Request your results from test@beta-research.org </p>
+</div></div>
 
 <section class="progress-bars3 cid-rEYfoq0Mti" id="progress-bars3-91">
  
