--- a/Social.html
+++ b/Social.html
@@ -93,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-s">
 
     
 
@@ -290,7 +290,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p5WTeBaitggN9fZxBETnKot61SG7JIwHVa6Jaj9JjEXTlfkkTQDvE4b/tRqcXCE9w6IqbDzoAcFXBoCN6KuzvkWy+2htJkjQibmZakG3AP/ZbSFvD4HLj+3dyYNlh3CY.Yhu2gW7PBFcxotBZSwjqLS2ZylFY8FFr2MNf45kmnQETqsXCRQi7Ll1biMsZmYFHGZEgJuBTNTk60Wf5ztHQrbN/miJamzaW73K50MtJO/7nApgpVxCbapUuFJT6GU25">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EG6x/OhPHXCH8yL6mYyp3YQTHdSG0afzojh0Uvpqna14u54gzuUM7/TBEgV2QEgmrZl5LjvvBOiMncxPNgfgbliR/8BUWVTBbgcYJfRyVME8SuE6xyef7lOBcWbv4MrW.6nx7YhyGN1LX2m7lemwhX30k4pV3aXoeeg4/OnEX82RppjuRF4degQJnlGR08CSzFXDnv6ZlGzFoEaAOEbAyiZqIBQB8dKxDB1VyWaAm1BDOb+yJ2ntXG5k18hfb0oxn">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
