--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -98,7 +98,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -115,14 +115,14 @@
     </div>
 </section>
 
-<section dir="rtl" class="form cid-rDq2pYmUSJ" id="formbuilder-7h">
+<section dir="ltr" class="form cid-rDq2pYmUSJ" id="formbuilder-7h">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aigVDZZCrDYTWUrlj35EZCHi23et9qm3Io9qQTWV1jNHxq59o3F6jn5sEIxYu4cZ8SM8GSw+2C9U65TSLTj2zbxK0gOATspNheqZ1TcYOoKvaoz8ZoFLhWfuozegxgRN.rCxHclu8iYZnrDX93r4cRiJYnf2v57HyveKpznCgd1vhK/ZS6xDRj58hCcrPsUjLQRnxZc/TsKkxVGEwnl8VPVsPUqdq1Zov6yGYdwQ5p2Ri8QkikCD2jOEjQkrv8i43">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Fpjg458Yud5eJlrtUQZw4kB0eMFv8eIRwO77onCN1vN1X1vuDqE5k85Vqmy9pbkJYzsm7HXktc/YROxDkOExMWFLWxG+WymQu/PeU5XfYaiyqBChpb7tNWj3Ayrl3Hw=.zcURDRkyu2P5ptb5hx4B5ZvXp0l4icDIPO8PxWABIOMkBECMZdYgUoG7JXz0S5KFiXwRKGfxsG+DmjoISrzdFkAvx4gUQgMmOETDxSVZh5yQ2gpwShtqgWdj096YMeM7">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -146,7 +146,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
 <textarea name="message" placeholder="by key" data-form-field="message" class="form-control display-7" id="message-formbuilder-7h"></textarea>
 </div>
-<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbrib-search mbr-iconfont mbr-iconfont-btn" style="font-size: 20px; color: rgb(196, 188, 59);"></span>&nbsp; &nbsp;Search&nbsp;</button></div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbrib-search mbr-iconfont mbr-iconfont-btn" style="font-size: 20px; color: rgb(239, 239, 239);"></span>&nbsp; &nbsp;Search&nbsp;</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
