--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -114,14 +114,14 @@
     </div>
 </section>
 
-<section dir="rtl" class="form cid-rDq1AFIWLq" id="formbuilder-7c">
+<section dir="ltr" class="form cid-rDq1AFIWLq" id="formbuilder-7c">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yX8sOrARy6sUgugxxsNj3oKMLvZ2hpBL1WZhyiu9xW7KbZYypK6Mw88xCOSTnwDHvrFfH//V3SjK40E5zrv90eWMEna/C/jhrffHDI/5K4GtKmuCodE5y1xK/dyc9BIg.YxErxrqSrOAn1sHkmceaBR6pG8FDhXAj7x4AzIA7IDpX2vNfIXsPg9jswvpBXVve0ptO7T5VJ4d1Ndany2vnbyWvAJj8RGhGJbYDxnMkGRPc5jT9tKNWqb7yqvPdcjsE">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="y+6a04bUtH/x6o1eVsQ2iDXVE8cWk3GjeXL0zyy0eqUCm5Wm4dR0bOCjXGXpWDuLbVvUtwCcddy5S41i7dXCALfirPzE0F/UQESjW5mLfdr65grYdbNoYPAx4UtGYRmD.PX0nMpHP91IG+wGBEiPVlEx3mo8L0M6N4M848xfmMV9P7qaNRZk9ap/8OR+PjSdCjs7n9mLYSjAEiUOo+r9umfVUHU84r88twF1PdaCLfUSyjzWcaW/ibQ8yw/lBxd0c">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -153,13 +153,13 @@
     </div>
 </section>
 
-<section dir="rtl" class="section-table cid-rDq1AGyPFR" id="table1-7d">
+<section dir="ltr" class="section-table cid-rDq1AGyPFR" id="table1-7d">
 
   
   
   <div class="container container-table">
       <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2">
-          نتيجة البحث</h2>
+          Search Results</h2>
       <h3 class="mbr-section-subtitle mbr-fonts-style align-center pb-5 mbr-light display-5">
             Click blue "Gear" icon in the top right corner to hide/show search and info, change the the table background and other parameters.  In browser click on the table head to sort the table, use search to filter the table.     
       </h3>
